<resources>
    <string name="app_name">weHive</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="something_wrong">Something is wrong</string>
    <string name="success">Success</string>
    <string name="email_required">Email Address required</string>
    <string name="password_required">Password required</string>
    <string name="please_try_again">Please try again</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="internet_connection">The internet connection appears to be offline</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="password_must_be_same">Password must be the same.</string>
    <string name="password_must_be_over_five">Password must be more than five characters.</string>
    <string name="or">or</string>
    <string name="done">Done</string>
    <string name="next">NEXT</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="email_exist">The email already exist.</string>
    <string name="username_exist">The username already exist.</string>
    <string name="select_image">Select Image</string>
    <string name="follow_tracking">Follow Tracking</string>
    <string name="user_preferences">user_preferences</string>
    <string name="prefereces_is_first_time_user">preferences_first_time_user</string>
    <string name="preferences_access_token">preferences_access_token</string>
    <string name="preferences_user_id">preferences_user_id</string>
    <string name="preferences_username">preferences_username</string>
    <string name="preferences_first_name">preferences_first_name</string>
    <string name="preferences_last_name">preferences_last_name</string>
    <string name="preferences_bio">preferences_bio</string>
    <string name="preferences_photo">preferences_photo</string>
    <string name="preferences_follow">preferences_follow</string>
    <string name="preferences_following">preferences_following</string>
    <string name="preferences_followers">preferences_followers</string>
    <string name="preferences_events">preferences_events</string>
    <string name="preferences_city">preferences_city</string>
    <string name="preferences_city_code">preferences_city_code</string>
    <string name="preferences_country">preferences_country</string>
    <string name="preferences_blocked">preferences_blocked</string>
    <string name="preferences_id_facebook">preferences_id_facebook</string>
    <string name="preferences_id_twitter">preferences_id_twitter</string>
    <string name="preferences_link">preferences_link</string>
    <string name="preferences_fbUsername">preferences_fbUsername</string>
    <string name="preferences_autocheckin">preferences_autocheckin</string>
    <string name="preferences_count_newsfeed">preferences_count_newsfeed</string>
    <string name="preferences_newsfeed_counter_menu">preferences_newsfeed_counter_menu</string>
    <string name="preferences_notifications_counter_menu">preferences_notifications_counter_menu</string>
    <string name="preferences_set_new_fragment">preferences_set_new_fragment</string>
    <string name="preferences_count_notifications">preferences_count_notifications</string>
    <string name="preferences_count_connections">preferences_count_connections</string>
    <string name="preferences_email">preferences_email</string>
    <string-array name="user_profile_menu">
        <item>Edit Profile</item>
        <item>Follow People</item>
        <item>Follow Artist</item>
    </string-array>
    <string-array name="report_user_menu">
        <item>Report User</item>
        <item>Block And Unfollow</item>
    </string-array>
    <string name="email_username_required">Please enter an email address or username.</string>
    <string name="already_hive_user">Already a weHive User?</string>
    <string name="new_user">Are you a new user?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="use_facebook">USE FACEBOOK</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log in</string>
    <string name="email_or_username">Email or username</string>
    <string name="send">SEND</string>
    <string name="log_in">LOGIN</string>
    <string name="back">BACK</string>
    <string name="sign_up">SIGN UP</string>
    <string name="explore">EXPLORE</string>
    <string name="we_hive">weHive</string>
    <string name="photo">Photo</string>
    <string name="sign_up_title">Sign up</string>
    <string name="bt_register">REGISTER</string>
    <string name="lb_use_email">OR USE EMAIL</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="login_sign">Login</string>
    <string name="accept_terms">By registering I accept weHive\'s Terms of Services and Privacy Policy</string>
    <string-array name="image_type">
        <item>Take Picture</item>
        <item>Select From Gallery</item>
    </string-array>
    <string-array name="options_menu">
        <item>@string/menu_option_user</item>
        <item>@string/menu_option_events</item>
        <item>@string/menu_option_notifications</item>
        <item>@string/menu_option_newsfeed</item>
        <item>@string/menu_option_settings</item>
    </string-array>
    <string name="menu_option_user">User</string>
    <string name="menu_option_events">Events</string>
    <string name="menu_option_notifications">Notifications</string>
    <string name="menu_option_newsfeed">NewsFeed</string>
    <string name="menu_option_settings">Settings</string>
    <string-array name="photo_carousel_menu">
        <item>@string/share_media</item>
        <item>@string/flag_media</item>
        <item>@string/show_likers</item>
    </string-array>
    <string name="share_media">Share Media</string>
    <string name="flag_media">Flag Media</string>
    <string name="show_likers">Show Likers</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="events">Events</string>
    <string name="good_times">GOOD TIMES</string>
    <string name="posts">Posts</string>
    <string name="good_time_empty">This section will have your events as soon you start attending and posting!</string>
    <string name="change_password">Change Password</string>
    <string name="automatic_check_in_to_events">Automatic Check-In to Events</string>
    <string name="automatic_checkin_warning_message">This requires background location monitoring and may affect battery performance</string>
    <string name="logout">LOGOUT</string>
    <string name="app_id">237911446408125</string>
    <string name="title_facebook_login">Facebook Login</string>
    <string name="old_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat password</string>
    <string name="save">SAVE</string>
    <string name="follow_people_title">Follow People</string>
    <string name="search_for_users">SEARCH FOR USERS</string>
    <string name="facebook_friends">FACEBOOK FRIENDS</string>
    <string name="twitter_followers">TWITTER FOLLOWERS</string>
    <string name="phone_contacts">PHONE CONTACTS</string>
    <string name="problem_open_facebook">Problem opening facebook account</string>
    <string name="problem_open_twitter">Problem opening twitter account</string>
    <string name="invite_facebook">You don´t have any Facebook contacts using weHive. Invite them all!</string>
    <string name="invite_twitter">You don´t have any Twitter contacts using weHive. Invite them all!</string>
    <string name="invite_phone">You don´t have any phone contact using this app</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="location">Location</string>
    <string name="city">City</string>
    <string name="bio">Bio</string>
    <string name="connect_with_facebook">CONNECT WITH FACEBOOK</string>
    <string name="connect_with_twitter">CONNECT WITH TWITTER</string>
    <string name="connected_to_twitter">CONNECTED TO TWITTER</string>
    <string name="sign_up_fb_instuctions">Choose a username, password and set your phone number</string>
    <string name="terms_and_conditions_intro">I have read and agreed to the Terms and Conditions</string>
    <string name="password_required_edit">Password field is required</string>
    <string name="firstname_required_edit">First Name field is required</string>
    <string name="lastname_required_edit">Last Name field is required</string>
    <string name="error_twitter_login">This Twitter account is already in use, please try again</string>
    <string name="changes_have_been_saved_successfully">Changes have been saved successfully</string>
    <string name="id_member_network">idMemberNetwork</string>
    <string name="id_member_network_state">idMemberNetworkState</string>
    <string name="member_network_position">memberNetworkPosition</string>
    <string name="accept_terms_conditions">I have read and agreed to the Terms and Conditions</string>
    <string name="terms_and_conditions_title">Terms and Conditions</string>
    <string name="terms_and_conditions_not_accepted">You must accept our Terms and Conditons</string>
    <string name="search">Search</string>
    <string name="phone_contacts_tile">Phone Contacts</string>
    <string name="facebook_friends_title">Facebook Friends</string>
    <string name="twitter_friends_title">Twitter Friends</string>
    <string name="search_for_users_title">Search Users</string>
    <string name="track_artists_title">Track Artists</string>
    <string name="comment">COMMENT</string>
    <string name="send_comment">Send</string>
    <string name="you_need_write_a_comment">You need write a comment</string>
    <string name="must_write_some_to_post">Must write some to post</string>
    <string name="you_cant_post_in_this_event">You can\'t post in this event</string>
    <string name="write_a_post">Write a post</string>
    <string name="you_are_not_allowed_to_post">You are not allowed to post</string>
    <string name="you_need_to_track_this_event_to_leave_a_post">You need to track this event to leave a post.</string>
    <string name="you_cannot_post_to_this_event_yet">You can\'t post to this event yet.</string>
    <string name="user_not_fount">User not found</string>
    <string name="share">SHARE:</string>
    <string name="say_something_about_this_post">Say something about this post</string>
    <string name="nearby">Nearby</string>
    <string name="trending">Trending</string>
    <string name="recommended">Recommended</string>
    <string name="past">Past</string>
    <string name="no_available_events">No available Events</string>
    <string name="upcoming">Upcoming</string>
    <string name="id_gcm">id_gcm</string>
    <string name="version_app">1</string>
    <string name="select_social_network">You need to select a social network</string>
    <string name="disconnected_from_twitter">Your twitter account has been successfully disconnected from your weHive account</string>
    <string name="why_report_user">Please tell us why you would like to report this user</string>
    <string name="block_user">Are you sure you want to block and unfollow this user?</string>
    <string name="event_details_title">Event Details</string>
    <string name="everything">Everything</string>
    <string name="delete_post">Are you sure you want to delete this post?</string>
    <string name="post_image">Post Image</string>
    <string name="publish_post">Publish Post</string>
</resources>