<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/action_bar_background"
              android:padding="10dp">

    <ImageView
        android:id="@+id/img_post"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/post_image"/>

    <uk.co.wehive.hive.utils.CustomFontTextView
        android:id="@+id/txt_post_description"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center|left"
        android:textColor="@android:color/white"/>

    <ImageView
        android:id="@+id/img_delete_post"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/delete_post"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:src="@drawable/ic_delete_post"/>

    <ImageView
        android:id="@+id/img_publish_post"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/publish_post"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:src="@drawable/ic_reload_post_publish"/>


</LinearLayout>