<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/general_background">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_login"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:scaleType="fitEnd"
                android:src="@drawable/logo_we_hive"/>

            <com.facebook.widget.LoginButton
                android:id="@+id/btn_login_facebook"
                xmlns:fb="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bt_facebook_background"
                android:drawableLeft="@drawable/ic_facebook"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/use_facebook"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:fontName="Raleway-Light.ttf"
                fb:background="@drawable/bt_facebook_background"
                fb:login_text="@string/use_facebook"
                fb:logout_text="@string/use_facebook"/>

            <uk.co.wehive.hive.utils.CustomFontTextView
                android:id="@+id/lbl_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_or_drawable"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_or_drawable"
                android:text="@string/or"
                android:textColor="@color/wehive_blue"
                android:textSize="18sp"
                app:fontName="Raleway-Light.ttf"/>

            <uk.co.wehive.hive.utils.CustomFontEditText
                android:id="@+id/edt_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/ed_login_background"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@android:color/white"
                app:fontName="Raleway-Light.ttf"/>

            <uk.co.wehive.hive.utils.CustomFontEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ed_login_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/white"
                app:fontName="Raleway-Light.ttf"/>

            <uk.co.wehive.hive.utils.CustomFontTextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/wehive_blue"
                app:fontName="Raleway-Light.ttf"/>
        </LinearLayout>

    </ScrollView>

    <uk.co.wehive.hive.utils.CustomFontButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/wehive_blue"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        app:fontName="Raleway-Light.ttf"/>

</RelativeLayout>
