<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/general_background"
                android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_save"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:padding="10dp">

            <uk.co.wehive.hive.utils.CustomFontEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ed_login_background"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/white"
                app:fontName="Raleway-Light.ttf"/>

            <uk.co.wehive.hive.utils.CustomFontEditText
                android:id="@+id/edt_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ed_login_background"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/white"
                app:fontName="Raleway-Light.ttf"/>

            <uk.co.wehive.hive.utils.CustomFontEditText
                android:id="@+id/edt_repeat_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ed_login_background"
                android:hint="@string/repeat_new_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/white"
                app:fontName="Raleway-Light.ttf"/>
        </LinearLayout>
    </ScrollView>

    <uk.co.wehive.hive.utils.CustomFontButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/wehive_blue"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:fontName="Raleway-Light.ttf"/>

</RelativeLayout>